--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     width: 100%;
     max-width: 320px;
     height: 80vh;
-    background: url(./images/weather.png) no-repeat center;
+    background: url(https://images.unsplash.com/photo-1555588746-13edde80e4a1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80) no-repeat center;
     background-size: cover;
     border-radius: 10px;
     overflow: hidden;
