--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
 }
 
 body {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(23,121,9,1) 0%, rgba(16,72,124,1) 0%, rgba(14,201,225,1) 100%, rgba(0,0,0,1) 100%, rgba(0,212,255,1) 100%);    font-family: Arial, sans-serif;
+    background: black;
     width: 100%;
     height: 100vh;
     display: flex;
